Fix background image layout issue
This commit fixes a bug where you could see the website background color (behind the background image) when you scrolled down.
All I did was to switch "position" from "absolute" to "fixed" in the class ".website-background".

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -23,7 +23,7 @@ body {
 .website-background {
   z-index: -3;
   margin: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
